; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_uhso.c_uhso_free_softc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_uhso.c_uhso_free_softc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uhso_softc = type { i32, i32, i32, i32 }

@M_USBDEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uhso_softc*)* @uhso_free_softc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uhso_free_softc(%struct.uhso_softc* %0) #0 {
  %2 = alloca %struct.uhso_softc*, align 8
  store %struct.uhso_softc* %0, %struct.uhso_softc** %2, align 8
  %3 = load %struct.uhso_softc*, %struct.uhso_softc** %2, align 8
  %4 = getelementptr inbounds %struct.uhso_softc, %struct.uhso_softc* %3, i32 0, i32 3
  %5 = call i64 @ucom_unref(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %23

7:                                                ; preds = %1
  %8 = load %struct.uhso_softc*, %struct.uhso_softc** %2, align 8
  %9 = getelementptr inbounds %struct.uhso_softc, %struct.uhso_softc* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @M_USBDEV, align 4
  %12 = call i32 @free(i32 %10, i32 %11)
  %13 = load %struct.uhso_softc*, %struct.uhso_softc** %2, align 8
  %14 = getelementptr inbounds %struct.uhso_softc, %struct.uhso_softc* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @M_USBDEV, align 4
  %17 = call i32 @free(i32 %15, i32 %16)
  %18 = load %struct.uhso_softc*, %struct.uhso_softc** %2, align 8
  %19 = getelementptr inbounds %struct.uhso_softc, %struct.uhso_softc* %18, i32 0, i32 0
  %20 = call i32 @mtx_destroy(i32* %19)
  %21 = load %struct.uhso_softc*, %struct.uhso_softc** %2, align 8
  %22 = call i32 @device_free_softc(%struct.uhso_softc* %21)
  br label %23

23:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @ucom_unref(i32*) #1

declare dso_local i32 @free(i32, i32) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @device_free_softc(%struct.uhso_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
